[package]
name = "pg_flashback"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/CaghanTU/pg_flashback"

[lib]
name = "pg_flashback"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pgrx_embed_pg_flashback"
path = "src/bin/pgrx_embed_pg_flashback.rs"

[features]
default = []
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]
pg_test = []

[dependencies]
pgrx = { version = "0.16.1", default-features = false }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4_flex = "0.11"
zstd = "0.13"
flate2 = "1"
openssl = "0.10"

[dev-dependencies]
pgrx-tests = "0.16.1"